--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -23,7 +23,7 @@ jobs:
           php-version: ${{ matrix.php-versions }}
           extensions: mbstring, mysql, pdo, pdo_sqlite, xml
           tools: composer:v2
-          coverage: pcov
+          coverage: xdebug
 
       - name: Setup problem matchers for PHP
         run: echo "::add-matcher::${{ runner.tool_cache }}/php.json"
