--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
         "gettext/gettext": "^4.8",
         "phpmailer/phpmailer": "^6.1",
         "robrichards/xmlseclibs": "^3.1",
+        "simplesamlphp/assert": "^0.0.13",
         "simplesamlphp/saml2": "^4.1",
         "simplesamlphp/simplesamlphp-module-adfs": "^0.9",
         "simplesamlphp/simplesamlphp-module-authcrypt": "^0.9",
