--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "post-intall": "minimum-node-version",
     "clean": "rm -rf www/assets/css/* && rm -rf www/assets/js/*",
-    "build": "webpack -p"
+    "build": "webpack"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.2",
@@ -27,15 +27,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
+    "@babel/helper-compilation-targets": "^7.14.4",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^6.4.1",
     "css-loader": "^4.3.0",
-    "expose-loader": "^1.0.0",
+    "expose-loader": "^2.0.0",
     "mini-css-extract-plugin": "^0.10.1",
     "node-sass": "^4.14.1",
     "sass-loader": "^9.0.3",
     "style-loader": "^1.3.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.2"
   }
 }
