--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "css-loader": "^5.2.6",
     "expose-loader": "^2.0.0",
     "mini-css-extract-plugin": "^1.6.0",
-    "node-sass": "^6.0.0",
+    "sass": "^1.35.1",
     "sass-loader": "^12.0.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.38.1",
