--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,11 @@
 /cert/
 /www/assets/fonts/*
 /www/assets/js/*.js
+/www/assets/js/*.js.LICENSE.txt
 !/www/assets/js/post.js
 /www/assets/js/*.map
 /www/assets/css/*.css
+/www/assets/css/*.css.LICENSE.txt
 !/www/assets/css/post.css
 /www/assets/css/*.map
 
