--- a/.gitattributes
+++ b/.gitattributes
@@ -3,8 +3,12 @@
 /metadata/.gitkeep export-ignore
 /tests export-ignore
 /tools export-ignore
-.coveralls.yml export-ignore
+codecov.yml export-ignore
 .editorconfig export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
-
+psalm.xml export-ignore
+phpcs.xml export-ignore
+phpunit.xml export-ignore
+.github export-ignore
+.php_cs.dist export-ignore
