Fix cron invocation from cron by specifying string parameter
Calling the cron module from cron in the adverstised way does
not add an output parameter explicitly. It defaulted to null
in the routing, however the controller does not accept null,
only string for third parameter so one would get a fatal error.
Fix it by setting a string as default.

--- a/modules/cron/routing/routes/routes.yaml
+++ b/modules/cron/routing/routes/routes.yaml
@@ -3,4 +3,4 @@ cron-croninfo:
     defaults:   { _controller: 'SimpleSAML\Module\cron\Controller\Cron::info' }
 cron-run:
     path:       /run/{tag}/{key}/{output}
-    defaults:   { _controller: 'SimpleSAML\Module\cron\Controller\Cron::run', output: null }
+    defaults:   { _controller: 'SimpleSAML\Module\cron\Controller\Cron::run', output: 'silent' }
