Drop support for Symfony 4

--- a/composer.json
+++ b/composer.json
@@ -53,17 +53,17 @@
         "simplesamlphp/assert": "^0.2.7",
         "simplesamlphp/saml2": "^4.2.3",
         "simplesamlphp/twig-configurable-i18n": "^2.3",
-        "symfony/cache": "^4.0 || ^5.0",
-        "symfony/config": "^4.0 || ^5.0",
-        "symfony/console": "^4.0 || ^5.0",
-        "symfony/dependency-injection": "^4.0 || ^5.0",
-        "symfony/finder": "^4.0 || ^5.0",
-        "symfony/framework-bundle": "^4.0 || ^5.0",
-        "symfony/http-foundation": "^4.0 || ^5.0",
-        "symfony/http-kernel": "^4.0 || ^5.0",
-        "symfony/routing": "^4.0 || ^5.0",
+        "symfony/cache": "^5.0",
+        "symfony/config": "^5.0",
+        "symfony/console": "^5.0",
+        "symfony/dependency-injection": "^5.0",
+        "symfony/finder": "^5.0",
+        "symfony/framework-bundle": "^5.0",
+        "symfony/http-foundation": "^5.0",
+        "symfony/http-kernel": "^5.0",
+        "symfony/routing": "^5.0",
         "symfony/var-exporter": "^5.0",
-        "symfony/yaml": "^4.0 || ^5.0",
+        "symfony/yaml": "^5.0",
         "twig/twig": "~2.0",
         "twig/intl-extra": "^3.3"
     },
