--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
         "files": ["tests/_autoload_modules.php"]
     },
     "require": {
-        "php": ">=7.1 <8",
+        "php": ">=7.1|^8",
         "ext-SPL": "*",
         "ext-zlib": "*",
         "ext-pcre": "*",
