--- a/composer.json
+++ b/composer.json
@@ -60,6 +60,7 @@
         "symfony/framework-bundle": "^5.0",
         "symfony/http-foundation": "^5.0",
         "symfony/http-kernel": "^5.0",
+        "symfony/intl": "<6",
         "symfony/routing": "^5.0",
         "symfony/translation-contracts": "<3",
         "symfony/twig-bridge": "^5.3",
