--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "jquery": "^3.6.0",
     "minimum-node-version": "^3.0.0",
     "purecss": "^2.0.6",
-    "reset-css": "^5.0.1",
-    "selectize": "^0.12.6"
+    "reset-css": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
