--- a/composer.json
+++ b/composer.json
@@ -49,33 +49,33 @@
         "ext-json": "*",
         "ext-mbstring": "*",
         "gettext/gettext": "^4.6",
-        "phpmailer/phpmailer": "^6.1",
-        "simplesamlphp/assert": "^0.2.7",
-        "simplesamlphp/saml2": "^4.3.0",
-        "symfony/cache": "^5.0",
-        "symfony/config": "^5.0",
-        "symfony/console": "^5.0",
-        "symfony/dependency-injection": "^5.0",
-        "symfony/finder": "^5.0",
-        "symfony/framework-bundle": "^5.0",
-        "symfony/http-foundation": "^5.0",
-        "symfony/http-kernel": "^5.0",
-        "symfony/intl": "<6",
-        "symfony/routing": "^5.0",
-        "symfony/translation-contracts": "<3",
-        "symfony/twig-bridge": "^5.3",
-        "symfony/var-exporter": "^5.0",
-        "symfony/yaml": "^5.0",
+        "phpmailer/phpmailer": "^6.5",
+        "simplesamlphp/assert": "^0.2.11",
+        "simplesamlphp/saml2": "^4.4",
+        "symfony/cache": "^5.4",
+        "symfony/config": "^5.4",
+        "symfony/console": "^5.4",
+        "symfony/dependency-injection": "^5.4",
+        "symfony/finder": "^5.4",
+        "symfony/framework-bundle": "^5.4",
+        "symfony/http-foundation": "^5.4",
+        "symfony/http-kernel": "^5.4",
+        "symfony/intl": "^5.4",
+        "symfony/routing": "^5.4",
+        "symfony/translation-contracts": "^2.5",
+        "symfony/twig-bridge": "^5.4",
+        "symfony/var-exporter": "^5.4",
+        "symfony/yaml": "^5.4",
         "twig/intl-extra": "^3.3",
-        "twig/twig": "^3.0"
+        "twig/twig": "^3.3"
     },
     "require-dev": {
         "ext-curl": "*",
         "ext-pdo_sqlite": "*",
         "mikey179/vfsstream": "~1.6",
-        "simplesamlphp/simplesamlphp-module-adfs": ">=2.0.0-rc1",
-        "simplesamlphp/simplesamlphp-test-framework": "^1.1.3",
-        "simplesamlphp/xml-security": "^0.3.3"
+        "simplesamlphp/simplesamlphp-module-adfs": ">=2.0.0-rc6",
+        "simplesamlphp/simplesamlphp-test-framework": "^1.1.5",
+        "simplesamlphp/xml-security": "^0.4.1"
     },
     "suggest": {
         "predis/predis": "Needed if a Redis server is used to store session information",
