Add intl-extension as a requirement;  symfony/intl requires it

--- a/composer.json
+++ b/composer.json
@@ -39,15 +39,16 @@
     },
     "require": {
         "php": ">=7.4 || ^8.0",
-        "ext-SPL": "*",
-        "ext-zlib": "*",
-        "ext-pcre": "*",
-        "ext-openssl": "*",
-        "ext-dom": "*",
         "ext-date": "*",
+        "ext-dom": "*",
         "ext-hash": "*",
+        "ext-intl": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
+        "ext-openssl": "*",
+        "ext-pcre": "*",
+        "ext-SPL": "*",
+        "ext-zlib": "*",
         "gettext/gettext": "^4.6",
         "phpmailer/phpmailer": "^6.5",
         "simplesamlphp/assert": "^0.2.11",
