--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -21,7 +21,7 @@ jobs:
         uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
         with:
           php-version: ${{ matrix.php-versions }}
-          extensions: mbstring, mysql, pdo, pdo_sqlite, xml
+          extensions: intl, mbstring, mysql, pdo, pdo_sqlite, xml
           tools: composer:v2
           coverage: xdebug
 
