Revert experimental Symfony6 support

--- a/composer.json
+++ b/composer.json
@@ -53,20 +53,20 @@
         "phpmailer/phpmailer": "^6.5",
         "simplesamlphp/assert": "^0.2.11",
         "simplesamlphp/saml2": "^4.4",
-        "symfony/cache": "^5.4 || ^6.0",
-        "symfony/config": "^5.4 || 6.0",
-        "symfony/console": "^5.4 || ^6.0",
-        "symfony/dependency-injection": "^5.4 || ^6.0",
-        "symfony/finder": "^5.4 || ^6.0",
-        "symfony/framework-bundle": "^5.4 || ^6.0",
-        "symfony/http-foundation": "^5.4 || ^6.0",
-        "symfony/http-kernel": "^5.4 || ^6.0",
-        "symfony/intl": "^5.4 || ^6.0",
-        "symfony/routing": "^5.4 || ^6.0",
-        "symfony/translation-contracts": "^2.5 || ^3.0",
-        "symfony/twig-bridge": "^5.4 || ^6.0",
-        "symfony/var-exporter": "^5.4 || ^6.0",
-        "symfony/yaml": "^5.4 || ^6.0",
+        "symfony/cache": "^5.4",
+        "symfony/config": "^5.4",
+        "symfony/console": "^5.4",
+        "symfony/dependency-injection": "^5.4",
+        "symfony/finder": "^5.4",
+        "symfony/framework-bundle": "^5.4",
+        "symfony/http-foundation": "^5.4",
+        "symfony/http-kernel": "^5.4",
+        "symfony/intl": "^5.4",
+        "symfony/routing": "^5.4",
+        "symfony/translation-contracts": "^2.5",
+        "symfony/twig-bridge": "^5.4",
+        "symfony/var-exporter": "^5.4",
+        "symfony/yaml": "^5.4",
         "twig/intl-extra": "^3.3",
         "twig/twig": "^3.3"
     },
