--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
         "ext-pcre": "*",
         "ext-SPL": "*",
         "ext-zlib": "*",
-        "gettext/gettext": "4.x-dev#3e7460f8d9c90174824e3f39240bd578bb3d376a",
+        "gettext/gettext": "^5.6.1",
+        "gettext/translator": "^1.0.1",
         "phpmailer/phpmailer": "^6.5",
         "simplesamlphp/assert": "^0.2.11",
         "simplesamlphp/saml2": "^4.5",
