--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~4.8.35",
-        "mikey179/vfsStream": "~1.6",
+        "mikey179/vfsstream": "~1.6",
         "friendsofphp/php-cs-fixer": "^2.2"
     },
     "suggests": {
