--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "clipboard": "^2.0.6",
+    "es5-shim": "^4.6.5",
     "es6-shim": "^0.35.6",
     "highlight.js": "^10.7.0",
     "jquery": "^3.6.0",
