--- a/package.json
+++ b/package.json
@@ -37,5 +37,6 @@
     "style-loader": "^2.0.0",
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1"
-  }
+  },
+  "browserslist": "last 2 versions, ie 11, > 1%"
 }
