Fix minimum-node-version so it is allowed to fail; i.e. it can't phone home behind a proxy

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "npm": ">=6.0.0"
   },
   "scripts": {
-    "postinstall": "minimum-node-version",
+    "postinstall": "minimum-node-version || true",
     "clean": "rm -rf www/assets/css/* && rm -rf www/assets/js/*",
     "build": "webpack"
   },
