--- a/modules/core/routing/routes/routes.yml
+++ b/modules/core/routing/routes/routes.yml
@@ -1,27 +1,27 @@
 core-welcome:
     path:       /welcome
-    defaults:   { _controller: 'SimpleSAML\Module\core\Controller\Login:welcome' }
+    defaults:   { _controller: 'SimpleSAML\Module\core\Controller\Login::welcome' }
 core-account-disco-clearchoices:
     path:       /account/disco/clearchoices
-    defaults:   { _controller: 'SimpleSAML\Module\core\Controller\Login:cleardiscochoices' }
+    defaults:   { _controller: 'SimpleSAML\Module\core\Controller\Login::cleardiscochoices' }
 core-loginuserpass:
     path:       /loginuserpass
-    defaults:   { _controller: 'SimpleSAML\Module\core\Controller\Login:loginuserpass' }
+    defaults:   { _controller: 'SimpleSAML\Module\core\Controller\Login::loginuserpass' }
 core-loginuserpassorg:
     path:       /loginuserpassorg
-    defaults:   { _controller: 'SimpleSAML\Module\core\Controller\Login:loginuserpassorg' }
+    defaults:   { _controller: 'SimpleSAML\Module\core\Controller\Login::loginuserpassorg' }
 core-error-nocookie:
     path:       /error/nocookie
-    defaults:   { _controller: 'SimpleSAML\Module\core\Controller\Exception:nocookie' }
+    defaults:   { _controller: 'SimpleSAML\Module\core\Controller\Exception::nocookie' }
 core-cardinality:
     path:       /error/cardinality
-    defaults:   { _controller: 'SimpleSAML\Module\core\Controller\Exception:cardinality' }
+    defaults:   { _controller: 'SimpleSAML\Module\core\Controller\Exception::cardinality' }
 core-warning-shortssointerval:
     path:       /warning/short_sso_interval
-    defaults:   { _controller: 'SimpleSAML\Module\core\Controller\Exception:shortSsoInterval' }
+    defaults:   { _controller: 'SimpleSAML\Module\core\Controller\Exception::shortSsoInterval' }
 core-post-redirect:
     path:       /postredirect
-    defaults:   { _controller: 'SimpleSAML\Module\core\Controller\Redirection:postredirect' }
+    defaults:   { _controller: 'SimpleSAML\Module\core\Controller\Redirection::postredirect' }
 core-legacy-welcome:
     path:       /frontpage_welcome.php
     defaults:   { _controller: 'Symfony\Bundle\FrameworkBundle\Controller\RedirectController::urlRedirectAction', path: /admin/, permanent: true }
@@ -36,16 +36,16 @@ core-legacy-federation:
     defaults:   { _controller: 'Symfony\Bundle\FrameworkBundle\Controller\RedirectController::urlRedirectAction', path: /admin/federation, permanent: true }
 core-logout:
     path:       /logout/{as}
-    defaults:   { _controller: 'SimpleSAML\Module\core\Controller\Logout:logout' }
+    defaults:   { _controller: 'SimpleSAML\Module\core\Controller\Logout::logout' }
 core-logout-resume:
-    path:       /logout/resume
-    defaults:   { _controller: 'SimpleSAML\Module\core\Controller\Logout:logoutResume' }
+    path:       /logout-resume
+    defaults:   { _controller: 'SimpleSAML\Module\core\Controller\Logout::resumeLogout' }
 core-logout-iframe:
-    path:       /logout/iframe
-    defaults:   { _controller: 'SimpleSAML\Module\core\Controller\Logout:logoutIframe' }
+    path:       /logout-iframe
+    defaults:   { _controller: 'SimpleSAML\Module\core\Controller\Logout::logoutIframe' }
 core-logout-iframe-done:
-    path:       /logout/iframe-done
-    defaults:   { _controller: 'SimpleSAML\Module\core\Controller\Logout:logoutIframeDone' }
+    path:       /logout-iframe-done
+    defaults:   { _controller: 'SimpleSAML\Module\core\Controller\Logout::logoutIframeDone' }
 core-logout-iframe-post:
-    path:       /logout/iframe-post
-    defaults:   { _controller: 'SimpleSAML\Module\core\Controller\Logout:logoutIframePost' }
+    path:       /logout-iframe-post
+    defaults:   { _controller: 'SimpleSAML\Module\core\Controller\Logout::logoutIframePost' }
