Fix references to old www-scripts

--- a/modules/saml/routing/routes/routes.yaml
+++ b/modules/saml/routing/routes/routes.yaml
@@ -19,3 +19,12 @@ saml-sp-singleLogoutService:
 saml-sp-metadata:
     path:       /sp/metadata/{sourceId}
     defaults:   { _controller: 'SimpleSAML\Module\saml\Controller\ServiceProvider::metadata' }
+saml-legacy-sp-assertionConsumerService:
+    path:       /sp/saml2-acs.php/{sourceId}
+    defaults:   { _controller: 'SimpleSAML\Module\saml\Controller\ServiceProvider::assertionConsumerService', path: /saml/sp/assertionConsumerService, permanent: true }
+saml-legacy-sp-singleLogoutService:
+    path:       /sp/saml2-logout.php/{sourceId}
+    defaults:   { _controller: 'SimpleSAML\Module\saml\Controller\ServiceProvider::singleLogoutService' path: /saml/sp/singleLogoutService, permanent: true }
+saml-legacy-sp-metadata:
+    path:       /sp/metadata.php/{sourceId}
+    defaults:   { _controller: 'SimpleSAML\Module\saml\Controller\ServiceProvider::metadata', path: /saml/sp/metadata, permanent: true }
