--- a/composer.json
+++ b/composer.json
@@ -53,6 +53,7 @@
         "ext-pcre": "*",
         "ext-SPL": "*",
         "ext-zlib": "*",
+        "composer/composer": "^2.3",
         "gettext/gettext": "^5.6.1",
         "gettext/translator": "^1.0.1",
         "phpmailer/phpmailer": "^6.5",
