--- a/modules/saml/routing/routes/routes.yml
+++ b/modules/saml/routing/routes/routes.yml
@@ -19,15 +19,6 @@ saml-sp-singleLogoutService:
 saml-sp-metadata:
     path:       /sp/metadata/{sourceId}
     defaults:   { _controller: 'SimpleSAML\Module\saml\Controller\ServiceProvider::metadata' }
-saml-legacy-sp-assertionConsumerService:
-    path:       /sp/saml2-acs.php/{sourceId}
-    defaults:   { _controller: 'SimpleSAML\Module\saml\Controller\ServiceProvider::assertionConsumerService', path: /saml/sp/assertionConsumerService, permanent: true }
-saml-legacy-sp-singleLogoutService:
-    path:       /sp/saml2-logout.php/{sourceId}
-    defaults:   { _controller: 'SimpleSAML\Module\saml\Controller\ServiceProvider::singleLogoutService', path: /saml/sp/singleLogoutService, permanent: true }
-saml-legacy-sp-metadata:
-    path:       /sp/metadata.php/{sourceId}
-    defaults:   { _controller: 'SimpleSAML\Module\saml\Controller\ServiceProvider::metadata', path: /saml/sp/metadata, permanent: true }
 websso-single-sign-on:
     path:       /idp/singleSignOnService
     defaults:   { _controller: 'SimpleSAML\Module\saml\Controller\WebBrowserSingleSignOn::singleSignOnService' }
@@ -39,7 +30,7 @@ websso-metadata:
     defaults:   { _controller: 'SimpleSAML\Module\saml\Controller\Metadata::metadata' }
 websso-single-logout:
     path:       /idp/singleLogout
-    defaults:   { _controller: 'SimpleSAML\Module\saml\Controller\SingleLogout::singleLogout' }
+    defaults:   { _controller: 'SimpleSAML\Module\saml\Controller\SingleLogout::singleLogoutService' }
 websso-init-single-logout:
     path:       /idp/initSingleLogout
     defaults:   { _controller: 'SimpleSAML\Module\saml\Controller\SingleLogout::initSingleLogout' }
