--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
             "SimpleSAML\\Module\\exampleauth\\": "modules/exampleauth/src",
             "SimpleSAML\\Module\\multiauth\\": "modules/multiauth/src",
             "SimpleSAML\\Module\\saml\\": "modules/saml/src"
-        }
+        },
+        "files": ["src/_autoload_modules.php"]
     },
     "autoload-dev": {
         "psr-4": {
@@ -39,7 +40,8 @@
             "SimpleSAML\\Test\\Module\\exampleauth\\": ["tests/modules/exampleauth/src"],
             "SimpleSAML\\Test\\Module\\multiauth\\": ["tests/modules/multiauth/src"],
             "SimpleSAML\\Test\\Module\\saml\\": ["tests/modules/saml/src"]
-        }
+        },
+        "files": ["tests/_autoload_modules.php"]
     },
     "require": {
         "php": ">=7.4 || ^8.0",
