--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
         "files": ["tests/_autoload_modules.php"]
     },
     "require": {
-        "php": ">=7.4 || ^8.0",
+        "php": "^8.0",
         "ext-date": "*",
         "ext-dom": "*",
         "ext-hash": "*",
