--- a/composer.json
+++ b/composer.json
@@ -93,6 +93,10 @@
         "twig/twig": "^3.3.8"
     },
     "require-dev": {
+        "ext-curl": "*",
+        "ext-pdo_sqlite": "*",
+
+        "gettext/php-scanner": "1.3.1",
         "mikey179/vfsstream": "~1.6",
         "simplesamlphp/simplesamlphp-test-framework": "^1.5.1",
         "simplesamlphp/xml-security": "^1.6.0"
