--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ '**' ]
   pull_request:
-    branches: [ master, release-* ]
+    branches: [ master, simplesamlphp-* ]
 
 jobs:
   basic-tests:
