allow symfony 6, update return types and update kernel

--- a/composer.json
+++ b/composer.json
@@ -61,21 +61,21 @@
         "phpmailer/phpmailer": "^6.5",
         "simplesamlphp/assert": "^0.3.0",
         "simplesamlphp/saml2": "^4.6",
-        "symfony/cache": "^5.4",
-        "symfony/config": "^5.4",
-        "symfony/console": "^5.4",
+        "symfony/cache": "^5.4||^6",
+        "symfony/config": "^5.4||^6",
+        "symfony/console": "^5.4||^6",
         "symfony/dependency-injection": "^5.4",
-        "symfony/filesystem": "^5.4",
-        "symfony/finder": "^5.4",
-        "symfony/framework-bundle": "^5.4",
-        "symfony/http-foundation": "^5.4",
-        "symfony/http-kernel": "^5.4",
-        "symfony/intl": "^5.4",
-        "symfony/routing": "^5.4",
+        "symfony/filesystem": "^5.4||^6",
+        "symfony/finder": "^5.4||^6",
+        "symfony/framework-bundle": "^5.4||^6",
+        "symfony/http-foundation": "^5.4||^6",
+        "symfony/http-kernel": "^5.4||^6",
+        "symfony/intl": "^5.4||^6",
+        "symfony/routing": "^5.4||^6",
         "symfony/translation-contracts": "^2.5",
-        "symfony/twig-bridge": "^5.4",
-        "symfony/var-exporter": "^5.4",
-        "symfony/yaml": "^5.4",
+        "symfony/twig-bridge": "^5.4||^6",
+        "symfony/var-exporter": "^5.4||^6",
+        "symfony/yaml": "^5.4||^6",
         "twig/intl-extra": "^3.3",
         "twig/twig": "^3.3.8"
     },
