--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
         "files": ["tests/_autoload_modules.php"]
     },
     "require": {
-        "php": ">=7.4 || ^8.0",
+        "php": "^8.0",
         "ext-date": "*",
         "ext-dom": "*",
         "ext-hash": "*",
@@ -63,21 +63,21 @@
         "simplesamlphp/composer-module-installer": "^1.3.0",
         "simplesamlphp/saml2": "^4.6",
         "simplesamlphp/simplesamlphp-assets-base": "^2.0",
-        "symfony/cache": "^5.4",
-        "symfony/config": "^5.4",
-        "symfony/console": "^5.4",
-        "symfony/dependency-injection": "^5.4",
-        "symfony/filesystem": "^5.4",
-        "symfony/finder": "^5.4",
-        "symfony/framework-bundle": "^5.4",
-        "symfony/http-foundation": "^5.4",
-        "symfony/http-kernel": "^5.4",
-        "symfony/intl": "^5.4",
-        "symfony/routing": "^5.4",
-        "symfony/translation-contracts": "^2.5",
-        "symfony/twig-bridge": "^5.4",
-        "symfony/var-exporter": "^5.4",
-        "symfony/yaml": "^5.4",
+        "symfony/cache": "^6.0",
+        "symfony/config": "^6.0",
+        "symfony/console": "^6.0",
+        "symfony/dependency-injection": "^6.0",
+        "symfony/filesystem": "^6.0",
+        "symfony/finder": "^6.0",
+        "symfony/framework-bundle": "^6.0",
+        "symfony/http-foundation": "^6.0",
+        "symfony/http-kernel": "^6.0",
+        "symfony/intl": "^6.0",
+        "symfony/routing": "^6.0",
+        "symfony/translation-contracts": "^3.0",
+        "symfony/twig-bridge": "^6.0",
+        "symfony/var-exporter": "^6.0",
+        "symfony/yaml": "^6.0",
         "twig/intl-extra": "^3.3",
         "twig/twig": "^3.3.8"
     },
