--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -3,8 +3,12 @@ name: CI
 on:
   push:
     branches: [ '**' ]
+    paths-ignore:
+      - '**.md'
   pull_request:
     branches: [ master, release-* ]
+    paths-ignore:
+      - '**.md'
 
 jobs:
   basic-tests:
