--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,7 @@
         "ext-pcre": "*",
         "ext-SPL": "*",
         "ext-zlib": "*",
+
         "composer/composer": "^2.3",
         "gettext/gettext": "^5.6.1",
         "gettext/translator": "^1.0.1",
@@ -82,8 +83,9 @@
     "require-dev": {
         "ext-curl": "*",
         "ext-pdo_sqlite": "*",
+
         "mikey179/vfsstream": "~1.6",
-        "simplesamlphp/simplesamlphp-module-adfs": ">=2.0.0-rc4",
+        "simplesamlphp/simplesamlphp-module-adfs": "dev-master",
         "simplesamlphp/simplesamlphp-test-framework": "^1.2.1",
         "simplesamlphp/xml-security": "^0.6.5"
     },
