--- a/composer.json
+++ b/composer.json
@@ -108,5 +108,20 @@
             "simplesamlphp/composer-module-installer": true,
             "muglug/package-versions-56": true
         }
+    },
+    "archive": {
+        "exclude": [
+            ".editorconfig",
+            ".gitattributes",
+            ".gitignore",
+            ".php_cs.dist",
+            "codecov.yml",
+            "node_modules",
+            "phpcs.xml",
+            "phpunit.xml",
+            "phpunit-interoperability.xml",
+            "psalm.xml",
+            "tests"
+        ]
     }
 }
