--- a/composer.json
+++ b/composer.json
@@ -114,7 +114,11 @@
             ".editorconfig",
             ".gitattributes",
             ".gitignore",
+            ".markdownlintignore",
+            ".markdownlintrc",
             ".php_cs.dist",
+            "bin/build-release.sh",
+            "cert/.gitkeep",
             "codecov.yml",
             "node_modules",
             "phpcs.xml",
