--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,7 @@
 /cert/.gitkeep export-ignore
+/www/assets/css/.gitkeep export-ignore
+/www/assets/fonts/.gitkeep export-ignore
+/www/assets/js/.gitkeep export-ignore
 /tests export-ignore
 codecov.yml export-ignore
 .editorconfig export-ignore
