Clean repo & release-script (#1717)
* Change build-script to leverage composer archive

* No longer include data/ cache/ and log/ directories. They don't belong in the install-dir

* Remove unnecessary .gitkeep files

* Merge config&config-templates and metadata&metadata-templates; templates renamed to .dist

* Reduce git clone overhead

* Throw an exception if datadir not set

Co-authored-by: Thijs Kinkhorst <thijs@kinkhorst.com>

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,8 @@
-/cache/.gitkeep export-ignore
-/config/.gitkeep export-ignore
-/metadata/.gitkeep export-ignore
+/cert/.gitkeep export-ignore
+/www/assets/css/.gitkeep export-ignore
+/www/assets/fonts/.gitkeep export-ignore
+/www/assets/js/.gitkeep export-ignore
 /tests export-ignore
-/tools export-ignore
 codecov.yml export-ignore
 .editorconfig export-ignore
 .gitattributes export-ignore
