--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
-/log/
-/config/
-/metadata/
-/cert/
+cert/*
+config/*
+metadata/*
+!/cert/*.gitkeep
+!/config/*.dist
+!/metadata/*.dist
 /www/assets/fonts/*
 /www/assets/js/*.js
 /www/assets/js/*.js.LICENSE.txt
@@ -13,10 +15,6 @@
 /www/assets/css/*.map
 .phpunit.result.cache
 
-!/config/.gitkeep
-!/metadata/.gitkeep
-!/cache/.gitkeep
-!/locales/.gitkeep
 !/www/assets/fonts/.gitkeep
 !/www/assets/js/.gitkeep
 !/www/assets/css/.gitkeep
